# CBNA_PHPBB_Analysis

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/common/: ForumCrawler.cpp  ForumCrawler.hpp  bbcode_to_markdown.cpp  bbcode_to_markdown.hpp  list_files.hpp
src/data/common/: Date.cpp  Date.hpp
src/data/raw/: RawForum.hpp  RawMessage.cpp  RawMessage.hpp  RawTopic.cpp  RawTopic.hpp  RawUser.cpp  RawUser.hpp
src/data/time_stat/: TimeStat.cpp  TimeStat.hpp
src/data/word_usage/: WordUsage.cpp  WordUsage.hpp
src/download/: CP1252_to_UTF8.hpp  HTTPDownloader.cpp  HTTPDownloader.hpp
src/parse/: ForumParser.cpp  ForumParser.hpp  HTMLToMarkdown.cpp  HTMLToMarkdown.h  MessageParser.cpp  MessageParser.hpp  TopicParser.cpp  TopicParser.hpp  UserParser.cpp  UserParser.hpp
src/transform/: CbnaHtmlToMarkdown.cpp  CbnaHtmlToMarkdown.hpp  HtmlToMarkdown.cpp  HtmlToMarkdown.hpp  to_avatar_list.cpp  to_avatar_list.hpp  to_test_cbna_forum.cpp  to_test_cbna_forum.hpp  to_time_stat.cpp  to_time_stat.hpp  to_word_usage.cpp  to_word_usage.hpp
